fix: gap size in games list

--- a/src/components/GamesList/GamesList.scss
+++ b/src/components/GamesList/GamesList.scss
@@ -25,8 +25,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
     grid-auto-rows: 10px;
-    column-gap: 15px;
-    grid-gap: 0 25px;
+    column-gap: 25px;
     list-style-type: none;
 
     &-element {
@@ -47,7 +46,7 @@
     padding: 10px 20px;
     &__list {
       grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-      grid-gap: 0 15px;
+      column-gap: 15px;
     }
   }
 }
